# csbc_autopost

./: .env.example  .gitignore  autopost.db  dockerfile  pyproject.toml
.github/workflows/: deployment.yml
app/: chat_openai.py  main.py  models.py  parser.py  settings.py
app/bot/: __init__.py  bot.py  runner.py
app/bot/controllers/: news_moderation.py
app/bot/routes/: news_moderation.py
app/handlers/: news.py
site_parser/: parsing.py  stroring.py
telegram/: bot.py  callbacks.py  controllers.py  moderation_handlers.py  routers.py  runner.py
